--- a/data/en/team.yml
+++ b/data/en/team.yml
@@ -132,9 +132,9 @@ team_member:
         link : "https://pahrialms.medium.com"
         
   # team member loop
-  - name : "Alban Spencer"
-    image : "images/team/team.png"
-    designation : "Depok"
+  - name : "Moch Rafi Riadi"
+    image : "images/team/rydrafi13.png"
+    designation : "Lampung"
     social:
       - name : "facebook"
         icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
@@ -146,11 +146,11 @@ team_member:
         
       - name : "linkedin"
         icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
+        link : "https://id.linkedin.com/in/rafiriadi13"
         
       - name : "website"
         icon : "fa-chrome" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
+        link : "https://rydrafi13.github.io/myblog/"
 
   # team member loop
   - name : "Alban Spencer"
