--- a/data/en/team.yml
+++ b/data/en/team.yml
@@ -150,21 +150,21 @@ team_member:
 
   # team member loop
   - name : "Alban Spencer"
-    image : "images/team/team.png"
-    designation : "Bekasi"
+    image : "images/team/dika.png"
+    designation : "Madiun"
     social:
       - name : "facebook"
         icon : "fa-facebook" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
+        link : "https://facebook.com/pramudika13"
 
       - name : "twitter"
         icon : "fa-twitter" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
+        link : "https://twitter.com/pramdka"
 
       - name : "linkedin"
         icon : "fa-linkedin" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
+        link : "https://www.linkedin.com/in/pramudika"
 
       - name : "website"
         icon : "fa-chrome" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
-        link : "#"
+        link : "https://aryapramudika.com"
