--- a/data/id/volunteers.yml
+++ b/data/id/volunteers.yml
@@ -1,22 +1,22 @@
 volunteers:
   ########################## volunteers item loop ##########################
-  - title : "Call for Volunteers"
-    content : "The OpenStack & OpenInfra Indonesia community is opening opportunities for those of you who want to contribute to becoming new volunteers/admins"
+  - title : "Panggilan untuk relawan"
+    content : "Komunitas OpenStack & OpenInfra Indonesia membuka peluang bagi mereka yang ingin berkontribusi sebagai relawan/admin baru."
     job_accordion:
       # job accordion loop item
-      - name : "Qualifications"
+      - name : "Kualifikasi"
         apply_url : "https://forms.gle/Q8Xvvy4VTGzcm7Hw9"
         bullet_point:
-          - Indonesian Citizens (WNI)
-          - Have internet connection
-          - Have strong interest in Open Infrastructure technologies
-          - Committed to volunteering
+          - Warga negara Indonesia (WNI)
+          - Memiliki koneksi internet
+          - Memiliki minat yang kuat terhadap teknologi Open Infrastructure.
+          - Berkomitmen untuk menjadi sukarelawan
 
       # job accordion loop item
-      - name : "Responsibilities"
+      - name : "Tanggung Jawab"
         bullet_point:
-          - Event - ensuring events go smoothly, including choosing venues and hiring spakers.
-          - Content - responsible for creating and publishing content on all social media platforms.
-          - Artwork - create posters, templates, or anything related to design.
-          - Infrastructure - managing, troubleshooting, and updating all infrastructure website, mail, pages, etc.
-          - Public relations/Account - developing relationships with sponsors or other organizations.
+          - Bagian acara - memastikan acara berjalan dengan lancar, termasuk memilih tempat dan menyewa pembicara.
+          - Bagian konten - bertanggung jawab dalam membuat dan mempublikasikan konten di semua platform media sosial.
+          - Bagian desain - membuat poster, template, atau apa saja yang terkait dengan desain.
+          - Bagian infrastruktur - mengelola, memperbaiki masalah, dan memperbarui semua infrastruktur website, email, halaman, dll.
+          - Bagian hubungan masyarakat/akun - mengembangkan hubungan dengan sponsor atau organisasi lainnya.
