--- a/data/en/about.yml
+++ b/data/en/about.yml
@@ -16,7 +16,13 @@ company_profile:
       icon : "fa-usd" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
       title : "Sponsors"
       content : "If you are interested in hearing more about how your organisation can be a part of this community, leave us a [message](https://www.openinfra.id/contact/) or email us at sponsor@openinfra.id"
-      
+     
+    # profile tab item loop
+    - name : "Donation"
+      icon : "fa-money" # fontawesome icon pack 4.7 | https://fontawesome.com/v4.7.0/icons/
+      title : "Donation"
+      content : "Scan QRIS to make a donation"
+
 ############################### funfact ##################################
 funfact:
   enable : true
